--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ввод API-ключа</title>
+  <script defer src="/_vercel/insights/script.js"></script>
   <link rel="stylesheet" href="src/scss/styles.css">
 </head>
 <body>
