--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ввод API-ключа</title>
   <script defer src="/_vercel/insights/script.js"></script>
-  <link rel="stylesheet" href="src/scss/styles.css">
+  <link rel="stylesheet" href="src/css/styles.css">
 </head>
 <body>
   <div class="container">
