--- a/geocoder.html
+++ b/geocoder.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Геокодирование адресов</title>
-  <link rel="stylesheet" href="src/scss/styles.css">
+  <link rel="stylesheet" href="src/css/styles.css">
   <script>
     // Получаем API-ключ из localStorage
     const apiKey = localStorage.getItem("yandex-api-key");
